
option java_package = "fractus.net";

message InstantMessage {
    required string contents = 1;
}

message ClientInfo {
    optional string version = 1;
    optional string location = 2;
}

////////////////////
// Key Management //
////////////////////

message PublicKey {
    required string encoding = 1;
    required bytes public_key = 2;
}

message RegisterKeyReq {
    required string username = 1;
    required string password = 2;
}

message RegisterKeyRes {
  enum ResponseCode {
    SUCCESS = 0;
    AUTHENTICATION_FAILURE = 1;
    DUPLICATE_KEY = 2;
    INTERNAL_ERROR = 3;
  }
  required ResponseCode code = 1;
}

message IdentifyKeyReq {
    required string encoding = 1;
    required bytes public_key = 2;
}

//////////////
// Location //
//////////////

message Location {
    optional string address = 1;
    optional int32 port = 2;
}

message RegisterLocationReq {
    repeated Location location_list = 1;
}

message RegisterLocationRes {
  enum ResponseCode {
    SUCCESS = 0;
    AUTHENTICATION_FAILURE = 1;
    DUPLICATE_KEY = 2;
    INTERNAL_ERROR = 3;
  }
  required ResponseCode code = 1;
}

//////////////
// Contacts //
//////////////

message AddContactReq {
  optional string username = 1;
  optional string message = 2;
}

message AddContactRes {
  enum ResponseCode {
    SUCCESS = 0;
    REDUNDANT = 1;
    INVALID_USER = 2;
  }
}

message RemoveContactReq {
  optional string username = 1;
}

message RemoveContactRes {
  enum ResponseCode {
    SUCCESS = 0;
    REDUNDANT = 1;
  }
  required ResponseCode code = 1;
}
